# esp12-mqtt-system-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LICENSE-COMMONS-CLAUSE.md  README.md  platformio.ini
.beads/: config.yaml  issues.jsonl
.serena/: project.yml
apps/firmware/: platformio.ini
apps/firmware/include/: connection_policy.h
apps/firmware/src/: main.cpp
apps/sender/go/: README.md  go.mod  go.sum  gpu_test.go  main.go  payload.go  payload_test.go
apps/sender/python/: .dockerignore  Dockerfile  README.md  docker-compose.yml  metrics_payload.py  pyproject.toml  requirements.txt  sender_v2.py  senderctl.sh
apps/sender/python/tests/: test_metrics_payload.py  test_sender_v2_gpu.py
docs/: 2026-02-22-mqtt-stability-debug-report.md
docs/guide/: 安裝與使用指南.md
docs/plans/: 2026-02-06-mqtt-system-monitor.md  2026-02-06-wifi-webui-design.md  2026-02-06-wifi-webui-implementation.md  2026-02-22-minimal-resource-refactor.md  2026-02-25-metrics-v2-monorepo.md
docs/protocol/: metrics-v2.md
include/: connection_policy.h
scripts/: patch_pubsubclient.py
skills/esp8266-esp12-iot-firmware/: SKILL.md
skills/esp8266-esp12-iot-firmware/agents/: openai.yaml
skills/esp8266-esp12-iot-firmware/references/: esp12-blink-optimization-checklist.md  official-best-practices.md
skills/esp8266-esp12-iot-firmware/scripts/: esp8266_iot_audit.sh
src/: main.cpp
src/include/: html_monitor.h  html_page.h  monitor_config.h  monitor_display.h  mqtt_client.h  tft_driver.h  web_server.h  wifi_manager.h
test/test_connection_policy/: test_main.cpp
(+15 files in other folders)
